# metla

./: .gitignore  Cargo.toml  README.md  go.mod  go.sum  justfile
.github/workflows/: go.yml
cmd/genkey/: main.go
cmd/metla/: components.go  data.go  main.go  middleware.go  routes.go
docs/: openapi.yaml
internal/db/: db.go
internal/gosthp/: README  go.mod
internal/gosthp/cmd/: gostrun.go
internal/gosthp/gosthp/: docipher.go  docipher_amd64.go  docipher_amd64.s  docipher_arm64.go  docipher_arm64.s  gosthp.go
internal/html/components/: components.go
internal/html/htmx/: htmx.go
internal/html/pages/: pages.go
internal/http/: helpers.go  http.go
internal/middleware/: middleware.go
migrations/: 000001_create_users_table.up.sql  000001_init.down.sql  000001_init.up.sql  000002_create_session_table.down.sql  000002_create_session_table.up.sql  000003_create_otp_table.down.sql  000003_create_otp_table.up.sql  20250326102548_init.sql  db.sql  test_table.sql
src/: main.rs
ui/: base.html
ui/htmx/: errorDiv.html  loginOTP.html  register-exists.html
ui/pages/: changePassword.html  enableOTP.html  index.html  login.html  map.html  register.html  user.html  usersTable.html
web/css/: style.css
web/html/: index.html  login.html  register.html  usersTable.html
web/js/: map.js
web/map/: spb.pmtiles
web/map/basemaps-assets/: style.json
